--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>Created by [Your Name] | <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+            <p>Created by Shantanu Dwivedi | <a href="https://github.com/shantanudwivedi1" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
             <p class="copyright">Powered by OpenWeather API</p>
         </footer>
     </div>
